--- a/FluentLauncher.Extension.ConnectX/Views/ConnectXPage.xaml
+++ b/FluentLauncher.Extension.ConnectX/Views/ConnectXPage.xaml
@@ -150,7 +150,7 @@
                     <controls:SettingsExpander
                         Description="连接到 ConnectX 服务来创建和加入联机房间"
                         Header="ConnectX 远程联机服务器"
-                        IsExpanded="True">
+                        IsExpanded="{x:Bind VM.IsConnected, Mode=OneWay, Converter={StaticResource InvertBoolConverter}}">
                         <controls:SettingsExpander.HeaderIcon>
                             <FontIcon Glyph="&#xE967;" />
                         </controls:SettingsExpander.HeaderIcon>
@@ -302,6 +302,21 @@
                         </StackPanel>
                     </controls:SettingsCard>
 
+                    <InfoBar
+                        x:Name="ListenedServerInfoBar"
+                        Title="监听到游戏广播"
+                        Margin="0,0,0,-2"
+                        x:Load="{x:Bind VM.ListenedServer, Mode=OneWay}"
+                        IsClosable="False"
+                        IsOpen="True"
+                        Message="{x:Bind VM.ListenedServerName, Mode=OneWay}"
+                        Opacity="0.85"
+                        Severity="Success">
+                        <InfoBar.ActionButton>
+                            <HyperlinkButton Content="{x:Bind VM.ListenedServerPort, Mode=OneWay}" />
+                        </InfoBar.ActionButton>
+                    </InfoBar>
+
                     <controls:SettingsCard
                         x:Name="RoomUserInfoCard"
                         x:Load="{x:Bind VM.IsInRoom, Mode=OneWay}"
@@ -345,16 +360,14 @@
                         <GridView.ItemTemplate>
                             <DataTemplate x:DataType="group:UserInfo">
                                 <Border
+                                    Width="160"
+                                    MinHeight="40"
                                     Padding="16,8"
                                     HorizontalAlignment="Stretch"
                                     VerticalAlignment="Stretch"
-                                    Background="{ThemeResource SettingsCardBackground}"
-                                    BorderBrush="{ThemeResource SettingsCardBorderBrush}"
-                                    BorderThickness="1"
-                                    CornerRadius="8"
+                                    Background="Transparent"
                                     PointerEntered="Border_PointerEntered"
                                     PointerExited="Border_PointerExited">
-
                                     <Grid>
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="Auto" />
@@ -362,22 +375,44 @@
                                             <ColumnDefinition Width="Auto" />
                                         </Grid.ColumnDefinitions>
 
-                                        <FontIcon FontSize="14" Glyph="&#xe77b;" />
+                                        <Border
+                                            Padding="5,0,5,0.5"
+                                            VerticalAlignment="Center"
+                                            CornerRadius="2.5">
+                                            <Border.Background>
+                                                <SolidColorBrush Opacity="0.25" Color="{ThemeResource SystemAccentColor}" />
+                                            </Border.Background>
+                                            <TextBlock
+                                                Margin="0,-1,0,0"
+                                                VerticalAlignment="Center"
+                                                Style="{ThemeResource CaptionTextBlockStyle}"
+                                                Text="{x:Bind local:ConnectXPage.GetTypeFromDisplayName(DisplayName)}" />
+                                        </Border>
 
                                         <TextBlock
                                             Grid.Column="1"
-                                            Margin="16,0"
+                                            Margin="12,0,0,0"
+                                            HorizontalAlignment="Left"
                                             VerticalAlignment="Center"
                                             Style="{ThemeResource BaseTextBlockStyle}"
-                                            Text="{x:Bind DisplayName}" />
+                                            Text="{x:Bind local:ConnectXPage.GetNameFromDisplayName(DisplayName)}"
+                                            TextTrimming="CharacterEllipsis"
+                                            TextWrapping="NoWrap" />
 
-                                        <Button
+                                        <HyperlinkButton
                                             Name="KickButton"
                                             Grid.Column="2"
+                                            Margin="16,0,0,0"
+                                            Padding="5,0,5,0.5"
+                                            VerticalAlignment="Center"
                                             CommandParameter="{x:Bind}"
-                                            Content="移出"
                                             Loaded="KickButton_Loaded"
-                                            Visibility="Collapsed" />
+                                            Visibility="Collapsed">
+                                            <TextBlock
+                                                Margin="0,-2,0,0"
+                                                VerticalAlignment="Center"
+                                                Text="移出" />
+                                        </HyperlinkButton>
                                     </Grid>
                                 </Border>
                             </DataTemplate>
